fix: Make missing actions column header visible in saved cart list (#18426)

--- a/feature-libs/cart/saved-cart/styles/_saved-cart-list.scss
+++ b/feature-libs/cart/saved-cart/styles/_saved-cart-list.scss
@@ -129,6 +129,11 @@ cx-saved-cart-list {
     .cx-saved-cart-list-label {
       color: var(--cx-color-secondary);
 
+      // TODO: (CXSPA-5955) Remove feature flag next major
+      @include forFeature('a11ySavedCartsZoom') {
+        text-align: start;
+      }
+
       @include media-breakpoint-down(md) {
         font-size: var(--cx-font-size, 0.875rem);
         font-weight: var(--cx-font-weight-bold);
@@ -155,6 +160,16 @@ cx-saved-cart-list {
       padding-inline-start: 1.25rem;
       padding-inline-end: 1.25rem;
       min-height: auto;
+    }
+  }
+
+  // TODO: (CXSPA-5955) Remove feature flag next major
+  @include forFeature('a11ySavedCartsZoom') {
+    @include media-breakpoint-down(md) {
+      .cx-saved-cart-make-active {
+        min-height: unset;
+        padding: 0;
+      }
     }
   }
 }
